syntax = "proto3";
option go_package = "/;proto";

import "google/protobuf/any.proto";
package proto;

enum RoomStatus {
  idle = 0;
  inGame = 1;
}

message Room {
  uint32 id = 1;
  int32 capacity = 2;
  int32 play_time = 3;
  string master_id = 4;
  RoomStatus status = 5;
  int64 game_started_at = 6;
}

enum MessageType {
  get_rooms = 0;
  create_room = 1;
  join_room = 2;
  room_config = 3;
  exit_room = 4;
  start_game = 5;
  touch = 6;
  finish_game = 7;
  room_users = 8;
  heartbeat = 9;
}

message Request {
  MessageType type = 1;
  google.protobuf.Any data = 2;
}

message Response {
  MessageType type = 1;
  google.protobuf.Any data = 2;
  int32 error = 3;
}

// Get Rooms
message GetRoomsRequest {}

message GetRoomsResponse {
  repeated Room rooms = 1;
}

// Create Room
message CreateRoomRequest {
  int32 capacity = 1;
  int32 play_time = 2;
}

message CreateRoomResponse {
  Room room = 1;
}

// Join Room
message JoinRoomRequest {
  uint32 room_id = 1;
}

message JoinRoomResponse {
  string user_id = 1;
}

// Get Room Config
message GetRoomConfigRequest {
  uint32 room_id = 1;
}

message GetRoomConfigResponse {
  Room room = 1;
}

// Room Users
message GetRoomUsersResponse {
  repeated string user_ids = 1;
}

// Exit Room
message ExitRoomRequest {
  uint32 room_id = 1;
}

message ExitRoomResponse {
  string user_id = 1;
}

// Start Game
message StartGameRequest {
  uint32 room_id = 1;
}

message StartGameResponse {
  int32 seed = 1;
  int64 game_started_at = 2;
}

// Touch Request
message TouchRequest {
  int32 x = 1;
  int32 y = 2;
}

message TouchResponse {
  string user_id = 1;
  int32 x = 2;
  int32 y = 3;
}

message UserScore {
  string user_id = 1;
  int32 score = 2;
}

message FinishGameResponse {
  repeated UserScore user_scores = 1;
}

// Heartbeat
message HeartbeatRequest {
  int64 timestamp = 1;
}
